--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,16 +15,16 @@
   <title>Blogs</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
 
   <!-- Additional CSS Files -->
-  <link rel="stylesheet" href="/static/assets/css/fontawesome.css">
-  <link rel="stylesheet" href="/static/assets/css/templatemo-stand-blog.css">
-  <link rel="stylesheet" href="/static/assets/css/owl.css">
-  <link rel="stylesheet" href="/static/assets/css/styles.css">
+  <link rel="stylesheet" href="{% static 'assets/css/fontawesome.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/templatemo-stand-blog.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/owl.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/styles.css' %}">
 
 
 </head>
@@ -46,22 +47,22 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/static/assets/images/img1.jpg" alt="image1">
+          <img src="{% static 'assets/images/img1.jpg' %}" alt="image1">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/static/assets/images/img2.jpg" alt="image2">
+          <img src="{% static 'assets/images/img2.jpg' %}" alt="image2">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/static/assets/images/img3.jpg" alt="image3">
+          <img src="{% static 'assets/images/img3.jpg' %}" alt="image3">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/static/assets/images/img4.jpg" alt="image4">
+          <img src="{% static 'assets/images/img4.jpg' %}" alt="image4">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -155,8 +156,8 @@
   {% include 'footer.html' %}
 
   <!-- Bootstrap core JavaScript -->
-  <script src="/static/vendor/jquery/jquery.min.js"></script>
-  <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+  <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
@@ -165,11 +166,11 @@
     crossorigin="anonymous"></script>
 
   <!-- Additional Scripts -->
-  <script src="/static/assets/js/custom.js"></script>
-  <script src="/static/assets/js/owl.js"></script>
-  <script src="/static/assets/js/slick.js"></script>
-  <script src="/static/assets/js/isotope.js"></script>
-  <script src="/static/assets/js/accordions.js"></script>
+  <script src="{% static 'assets/js/custom.js' %}"></script>
+  <script src="{% static 'assets/js/owl.js' %}"></script>
+  <script src="{% static 'assets/js/slick.js' %}"></script>
+  <script src="{% static 'assets/js/isotope.js' %}"></script>
+  <script src="{% static 'assets/js/accordions.js' %}"></script>
 
   <script language="text/Javascript">
     cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
