--- a/templates/index.html
+++ b/templates/index.html
@@ -16,18 +16,18 @@
   <title>BlogSpot - Blogging Website</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
 
 <!-- Additional CSS Files -->
-<link rel="stylesheet" href="/static/assets/css/fontawesome.css">
+<link rel="stylesheet" href="{% static 'assets/css/fontawesome.css' %}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-<link rel="stylesheet" href="/static/assets/css/templatemo-stand-blog.css">
-<link rel="stylesheet" href="/static/assets/css/owl.css">
-<link rel="stylesheet" href="/static/assets/css/styles.css">
+<link rel="stylesheet" href="{% static 'assets/css/templatemo-stand-blog.css' %}">
+<link rel="stylesheet" href="{% static 'assets/css/owl.css' %}">
+<link rel="stylesheet" href="{% static 'assets/css/styles.css' %}">
 
 </head>
 
@@ -51,31 +51,31 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/static/assets/images/nature.jpg" alt="image1">
+          <img src="{% static 'assets/images/nature.jpg' %}" alt="image1">
           <div class="carousel-caption ">
             <h1>NATURE</h1>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/static/assets/images/travel.jpg" alt="image2">
+          <img src="{% static 'assets/images/travel.jpg' %}" alt="image2">
           <div class="carousel-caption d-none d-md-block">
             <h1>TRAVEL</h1>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/static/assets/images/education.jpg" alt="image3">
+          <img src="{% static 'assets/images/education.jpg' %}" alt="image3">
           <div class="carousel-caption d-none d-md-block">
             <h1>EDUCATION</h1>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/static/assets/images/tech.jpg" alt="image4">
+          <img src="{% static 'assets/images/tech.jpg' %}" alt="image4">
           <div class="carousel-caption d-none d-md-block">
             <h1>TECHNOLOGY</h1>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/static/assets/images/ai.jpg" alt="image5">
+          <img src="{% static 'assets/images/ai.jpg' %}" alt="image5">
           <div class="carousel-caption d-none d-md-block">
             <h1>ARTIFICIAL INTELLIGENCE</h1>
           </div>
@@ -198,8 +198,8 @@
 
 
   <!-- Bootstrap core JavaScript -->
-  <script src="/static/vendor/jquery/jquery.min.js"></script>
-  <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+  <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
@@ -208,11 +208,11 @@
     crossorigin="anonymous"></script>
 
   <!-- Additional Scripts -->
-  <script src="/static/assets/js/custom.js"></script>
-  <script src="/static/assets/js/owl.js"></script>
-  <script src="/static/assets/js/slick.js"></script>
-  <script src="/static/assets/js/isotope.js"></script>
-  <script src="/static/assets/js/accordions.js"></script>
+  <script src="{% static 'assets/js/custom.js' %}"></script>
+  <script src="{% static 'assets/js/owl.js' %}"></script>
+  <script src="{% static 'assets/js/slick.js' %}"></script>
+  <script src="{% static 'assets/js/isotope.js' %}"></script>
+  <script src="{% static 'assets/js/accordions.js' %}"></script>
 
 
   <script language="text/Javascript">
