--- a/templates/create.html
+++ b/templates/create.html
@@ -75,7 +75,7 @@
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container">
         <a class="navbar-brand" href="{% url 'index' %}">
-          <h2>BLOG<span style="color: orangered;">SPOT</span></h2>
+          <h2>AI<span style="color: rgb(241, 110, 70);">SYNERGY</span></h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -91,7 +91,10 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'blog' %}">Blogs</a>
             </li>
-
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+            </li>
+  
             {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'create' %}">Create</a>
@@ -101,10 +104,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link text-primary" href="{% url 'logout' %}">Logout</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link text-primary" href="{% url 'signin' %}">Login</a>
             </li>
             {% endif %}
           </ul>
