--- a/templates/postedit.html
+++ b/templates/postedit.html
@@ -74,8 +74,8 @@
   <header class="">
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <h2>BLOG<span style="color: orangered;">SPOT</span></h2>
+        <a class="navbar-brand" href="{% url 'index' %}">
+          <h2>AI<span style="color: rgb(241, 110, 70);">SYNERGY</span></h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -91,7 +91,10 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'blog' %}">Blogs</a>
             </li>
-
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+            </li>
+  
             {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'create' %}">Create</a>
@@ -100,11 +103,7 @@
               <a class="nav-link" href="{% url 'profile' user.id %}">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'signin' %}">Login</a>
+              <a class="nav-link text-primary" href="{% url 'logout' %}">Logout</a>
             </li>
             {% endif %}
           </ul>
@@ -112,7 +111,6 @@
       </div>
     </nav>
   </header>
-
   <!-- Page Content -->
 
 
