--- a/templates/profile.html
+++ b/templates/profile.html
@@ -185,48 +185,46 @@
 
 <body>
 
-    <!-- Header -->
     <header class="">
         <nav class="navbar navbar-expand-lg bg-white">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <h2>BLOG<span style="color: orangered;">SPOT</span></h2>
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li>
-                            <a class="nav-link" href="{% url 'index' %}">Home
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'blog' %}">Blogs</a>
-                        </li>
-
-                        {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'create' %}">Create</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profile' user.id %}">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'signin' %}">Login</a>
-                        </li>
-                        {% endif %}
-                    </ul>
-                </div>
+          <div class="container">
+            <a class="navbar-brand" href="{% url 'index' %}">
+              <h2>AI<span style="color: rgb(241, 110, 70);">SYNERGY</span></h2>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+              aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+              <ul class="navbar-nav ml-auto">
+                <li>
+                  <a class="nav-link" href="{% url 'index' %}">Home
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'blog' %}">Blogs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                </li>
+      
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'create' %}">Create</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'profile' user.id %}">Profile</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-primary" href="{% url 'logout' %}">Logout</a>
+                </li>
+                {% endif %}
+              </ul>
             </div>
+          </div>
         </nav>
-    </header>
+      </header>
 
 
     <div class="mt-3">
